--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body class="inter-font bg-[#412567]">
     <nav
-      class="flex justify-between items-center p-[20px] md:px-[150px] md:py-[30px] lg:px-[200px]"
+      class="flex justify-between items-center p-[20px] md:px-[150px] md:py-[30px] lg:px-[200px] border-b-2 border-b-[#746964]"
     >
       <div class="">
         <h2 class="text-white text-3xl">
@@ -72,5 +72,31 @@
         </div>
       </div>
     </header>
+    <!-- About section -->
+     <div class="about-section py-[40px] px-[20px] bg-[#1A0B2E] lg:py-[50px] lg:px-[200px] ">
+        <div class="text-center flex flex-col justify-center space-y-[16px]">
+            <h2 class="text-white text-[32px] font-bold lg:text-[48px]">About the Podcast</h2>
+            <p class="text-white opacity-[0.8] text-[16px] lg:w-[50%] lg:mx-auto lg:leading-[28px]">TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. We break down complex topics into digestible insights, explore productivity strategies that actually work, and share stories of personal growth from industry leaders.</p>
+            <p class="text-white opacity-[0.8] text-[16px] mt-1 lg:mt-[30px]">Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+        </div>
+        <div class="mt-[80px] grid grid-cols-2 justify-between lg:grid-cols-4  ">
+            <div class="flex flex-col space-y-[16px] items-center justify-center ">
+                <h2 class="text-[#00FF88] text-[40px] lg:text-[48px] font-black">150K+</h2>
+                <h3 class="text-[16px] text-white uppercase opacity-[0.8] ">Monthly Listeners</h3>
+            </div>
+            <div class="flex flex-col space-y-[16px] items-center justify-center">
+                <h2 class="text-[#00FF88] text-[40px] lg:text-[48px] font-black">200+</h2>
+                <h3 class="text-[16px] text-white uppercase opacity-[0.8] ">Episodes Published</h3>
+            </div>
+            <div class="flex flex-col space-y-[16px] items-center justify-center">
+                <h2 class="text-[#00FF88] text-[40px] lg:text-[48px] font-black">4.9★</h2>
+                <h3 class="text-[16px] text-white uppercase opacity-[0.8] ">Average Rating</h3>
+            </div>
+            <div class="flex flex-col space-y-[16px] items-center justify-center">
+                <h2 class="text-[#00FF88] text-[40px] lg:text-[48px] font-black">50+</h2>
+                <h3 class="text-[16px] text-white uppercase opacity-[0.8] ">Industry Experts</h3>
+            </div>
+        </div>
+     </div>
   </body>
 </html>
