--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -49,54 +49,165 @@
     </nav>
     <!-- hero section -->
     <header
-      class="bg-[url('images/hero-bg.png')] bg-cover bg-center bg-no-repeat min-h-[466px]  bg-[#19113D] relative lg:min-h-[760px] "
+      class="bg-[url('images/hero-bg.png')] bg-cover bg-center bg-no-repeat min-h-[466px] bg-[#19113D] relative lg:min-h-[760px]"
     >
-      <div class=" relative w-[200px] h-[200px] lg:w-[350px] lg:h-[350px] top-[40px] left-1/2 -translate-x-1/2">
+      <div
+        class="relative w-[200px] h-[200px] lg:w-[350px] lg:h-[350px] top-[40px] left-1/2 -translate-x-1/2"
+      >
         <img
-        class="w-[200px] h-[200px] lg:w-[350px] lg:h-[350px] "
-        src="images/hero-circle.png"
-        alt=""
-      />
-      <img class="w-[80px] lg:w-[200px]  h-[80px] lg:h-[200px] absolute left-1/2 top-1/2 -translate-[50%] " src="images/microphone.png" alt="" />
+          class="w-[200px] h-[200px] lg:w-[350px] lg:h-[350px]"
+          src="images/hero-circle.png"
+          alt=""
+        />
+        <img
+          class="w-[80px] lg:w-[200px] h-[80px] lg:h-[200px] absolute left-1/2 top-1/2 -translate-[50%]"
+          src="images/microphone.png"
+          alt=""
+        />
       </div>
       <!-- header text -->
-      <div class="my-[50px] flex flex-col space-y-[8px] justify-center items-center px-[20px] lg:mt-[60px] ">
-        <h2 class="text-[40px] font-extrabold text-white lg:text-[60px]">TechWave</h2>
-        <p class="text-white opacity-[0.8] text-[16px] text-center ">
+      <div
+        class="my-[50px] flex flex-col space-y-[8px] justify-center items-center px-[20px] lg:mt-[60px]"
+      >
+        <h2 class="text-[40px] font-extrabold text-white lg:text-[60px]">
+          TechWave
+        </h2>
+        <p class="text-white opacity-[0.8] text-[16px] text-center">
           Your daily dose of tech insights, productivity hacks, and personal
           growth
         </p>
         <div class="flex justify-between items-center mt-[16px] space-x-[8px]">
-          <button class="py-[12px] px-[20px] rounded-[10000px] bg-gradient-to-r from-[#F7E93F] via-[#FB09B4] to-[#9100F8] text-white">Listen on Spotify</button>
-          <button class="bg-transparent border border-[#00FF88] text-[#00FF88] text-[16px] py-[12px] px-[20px] rounded-[10000px] ">Subscribe</button>
+          <button
+            class="py-[12px] px-[20px] rounded-[10000px] bg-gradient-to-r from-[#F7E93F] via-[#FB09B4] to-[#9100F8] text-white"
+          >
+            Listen on Spotify
+          </button>
+          <button
+            class="bg-transparent border border-[#00FF88] text-[#00FF88] text-[16px] py-[12px] px-[20px] rounded-[10000px]"
+          >
+            Subscribe
+          </button>
         </div>
       </div>
     </header>
     <!-- About section -->
-     <div class="about-section py-[40px] px-[20px] bg-[#1A0B2E] lg:py-[50px] lg:px-[200px] ">
-        <div class="text-center flex flex-col justify-center space-y-[16px]">
-            <h2 class="text-white text-[32px] font-bold lg:text-[48px]">About the Podcast</h2>
-            <p class="text-white opacity-[0.8] text-[16px] lg:w-[50%] lg:mx-auto lg:leading-[28px]">TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. We break down complex topics into digestible insights, explore productivity strategies that actually work, and share stories of personal growth from industry leaders.</p>
-            <p class="text-white opacity-[0.8] text-[16px] mt-1 lg:mt-[30px]">Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+    <div
+      class="about-section py-[40px] px-[20px] bg-[#1A0B2E] lg:py-[50px] lg:px-[200px]"
+    >
+      <div class="text-center flex flex-col justify-center space-y-[16px]">
+        <h2 class="text-white text-[32px] font-bold lg:text-[48px]">
+          About the Podcast
+        </h2>
+        <p
+          class="text-white opacity-[0.8] text-[16px] lg:w-[50%] lg:mx-auto lg:leading-[28px]"
+        >
+          TechWave is your go-to podcast for staying ahead in the fast-paced
+          world of technology. We break down complex topics into digestible
+          insights, explore productivity strategies that actually work, and
+          share stories of personal growth from industry leaders.
+        </p>
+        <p class="text-white opacity-[0.8] text-[16px] mt-1 lg:mt-[30px]">
+          Join thousands of young professionals and tech enthusiasts who start
+          their day with TechWave.
+        </p>
+      </div>
+      <div class="mt-[80px] grid grid-cols-2 justify-between lg:grid-cols-4">
+        <div class="flex flex-col space-y-[16px] items-center justify-center">
+          <h2 class="text-[#00FF88] text-[40px] lg:text-[48px] font-black">
+            150K+
+          </h2>
+          <h3 class="text-[16px] text-white uppercase opacity-[0.8]">
+            Monthly Listeners
+          </h3>
         </div>
-        <div class="mt-[80px] grid grid-cols-2 justify-between lg:grid-cols-4  ">
-            <div class="flex flex-col space-y-[16px] items-center justify-center ">
-                <h2 class="text-[#00FF88] text-[40px] lg:text-[48px] font-black">150K+</h2>
-                <h3 class="text-[16px] text-white uppercase opacity-[0.8] ">Monthly Listeners</h3>
-            </div>
-            <div class="flex flex-col space-y-[16px] items-center justify-center">
-                <h2 class="text-[#00FF88] text-[40px] lg:text-[48px] font-black">200+</h2>
-                <h3 class="text-[16px] text-white uppercase opacity-[0.8] ">Episodes Published</h3>
-            </div>
-            <div class="flex flex-col space-y-[16px] items-center justify-center">
-                <h2 class="text-[#00FF88] text-[40px] lg:text-[48px] font-black">4.9★</h2>
-                <h3 class="text-[16px] text-white uppercase opacity-[0.8] ">Average Rating</h3>
-            </div>
-            <div class="flex flex-col space-y-[16px] items-center justify-center">
-                <h2 class="text-[#00FF88] text-[40px] lg:text-[48px] font-black">50+</h2>
-                <h3 class="text-[16px] text-white uppercase opacity-[0.8] ">Industry Experts</h3>
-            </div>
+        <div class="flex flex-col space-y-[16px] items-center justify-center">
+          <h2 class="text-[#00FF88] text-[40px] lg:text-[48px] font-black">
+            200+
+          </h2>
+          <h3 class="text-[16px] text-white uppercase opacity-[0.8]">
+            Episodes Published
+          </h3>
         </div>
-     </div>
+        <div class="flex flex-col space-y-[16px] items-center justify-center">
+          <h2 class="text-[#00FF88] text-[40px] lg:text-[48px] font-black">
+            4.9★
+          </h2>
+          <h3 class="text-[16px] text-white uppercase opacity-[0.8]">
+            Average Rating
+          </h3>
+        </div>
+        <div class="flex flex-col space-y-[16px] items-center justify-center">
+          <h2 class="text-[#00FF88] text-[40px] lg:text-[48px] font-black">
+            50+
+          </h2>
+          <h3 class="text-[16px] text-white uppercase opacity-[0.8]">
+            Industry Experts
+          </h3>
+        </div>
+      </div>
+    </div>
+    <!-- Why Choose section -->
+    <div
+      class="WhyChoose bg-[#230E3D] py-[40px] px-[20px] lg:py-[120px] lg:px-[200px]"
+    >
+      <h2 class="text-center text-white text-[32px] font-bold lg:text-[48px]">
+        Why Choose TechWave
+      </h2>
+      <div
+        class="grid grid-cols-1 mt-[16px] lg:mt-[40px] space-y-[16px] lg:grid-cols-12 grid-rows-12 lg:gap-[40px]"
+      >
+        <div
+          class="bg-[#351165]/40 p-[24px] flex flex-col space-y-[16px] rounded-[24px] lg:col-span-3 lg:row-span-8 lg:justify-center lg:px-[40px]"
+        >
+          <img class="w-[60px] h-[60px]" src="images/headphone.png" alt="" />
+          <h2 class="text-white text-[22px] lg:text-[24px] font-bold">
+            Premium Audio Quality
+          </h2>
+          <p class="text-[16px] leading-[24px] text-white/80">
+            Experience crystal-clear sound with professional-grade recording
+            equipment and expert audio engineering. Every episode is mastered
+            for optimal listening across all devices and platforms.
+          </p>
+        </div>
+        <div
+          class="bg-[#351165]/40 p-[24px] flex flex-col space-y-[16px] rounded-[24px] lg:col-span-9 lg:row-span-4 lg:justify-center lg:px-[40px]"
+        >
+          <img class="w-[60px] h-[60px]" src="images/device.png" alt="" />
+          <h2 class="text-white text-[22px] font-bold lg:text-[24px]">Mobile Friendly</h2>
+          <p class="text-[16px] leading-[24px] text-white/80">
+            Listen on the go with seamless mobile experience and offline
+            downloads.
+          </p>
+        </div>
+        <div
+          class="bg-[#351165]/40 p-[24px] flex flex-col space-y-[16px] rounded-[24px] lg:col-span-9 lg:row-span-4 lg:justify-center lg:px-[40px]"
+        >
+          <img class="w-[60px] h-[60px]" src="images/location.png" alt="" />
+          <h2 class="text-white text-[22px] font-bold lg:text-[24px]">Global Community</h2>
+          <p class="text-[16px] leading-[24px] text-white/80">
+            Connect with tech enthusiasts from over 120 countries worldwide.
+          </p>
+        </div>
+        <div
+          class="bg-[#351165]/40 p-[24px] flex flex-col space-y-[16px] rounded-[24px] lg:col-span-8 lg:row-span-4 lg:justify-center lg:px-[40px]"
+        >
+          <img class="w-[60px] h-[60px]" src="images/zap-fast.png" alt="" />
+          <h2 class="text-white text-[22px] font-bold lg:text-[24px]">Exclusive Interviews</h2>
+          <p class="text-[16px] leading-[24px] text-white/80">
+            Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.
+          </p>
+        </div>
+        <div
+          class="bg-[#351165]/40 p-[24px] flex flex-col space-y-[16px] rounded-[24px] lg:col-span-4 lg:row-span-4 lg:justify-center lg:px-[40px]"
+        >
+          <img class="w-[60px] h-[60px]" src="images/resource.png" alt="" />
+          <h2 class="text-white text-[22px] font-bold">Rich Resources</h2>
+          <p class="text-[16px] leading-[24px] text-white/80">
+            Access show notes, transcripts, and additional learning materials
+            for every episode.
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
