--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         Why Choose TechWave
       </h2>
       <div
-        class="grid grid-cols-1 mt-[16px] lg:mt-[40px] space-y-[16px] lg:grid-cols-12 grid-rows-12 lg:gap-[40px]"
+        class="grid grid-cols-1 mt-[16px] lg:mt-[40px] space-y-[16px] lg:grid-cols-12 lg:gap-[40px]"
       >
         <div
           class="bg-[#351165]/40 p-[24px] flex flex-col space-y-[16px] rounded-[24px] lg:col-span-3 lg:row-span-8 lg:justify-center lg:px-[40px]"
@@ -173,7 +173,9 @@
           class="bg-[#351165]/40 p-[24px] flex flex-col space-y-[16px] rounded-[24px] lg:col-span-9 lg:row-span-4 lg:justify-center lg:px-[40px]"
         >
           <img class="w-[60px] h-[60px]" src="images/device.png" alt="" />
-          <h2 class="text-white text-[22px] font-bold lg:text-[24px]">Mobile Friendly</h2>
+          <h2 class="text-white text-[22px] font-bold lg:text-[24px]">
+            Mobile Friendly
+          </h2>
           <p class="text-[16px] leading-[24px] text-white/80">
             Listen on the go with seamless mobile experience and offline
             downloads.
@@ -183,7 +185,9 @@
           class="bg-[#351165]/40 p-[24px] flex flex-col space-y-[16px] rounded-[24px] lg:col-span-9 lg:row-span-4 lg:justify-center lg:px-[40px]"
         >
           <img class="w-[60px] h-[60px]" src="images/location.png" alt="" />
-          <h2 class="text-white text-[22px] font-bold lg:text-[24px]">Global Community</h2>
+          <h2 class="text-white text-[22px] font-bold lg:text-[24px]">
+            Global Community
+          </h2>
           <p class="text-[16px] leading-[24px] text-white/80">
             Connect with tech enthusiasts from over 120 countries worldwide.
           </p>
@@ -192,9 +196,14 @@
           class="bg-[#351165]/40 p-[24px] flex flex-col space-y-[16px] rounded-[24px] lg:col-span-8 lg:row-span-4 lg:justify-center lg:px-[40px]"
         >
           <img class="w-[60px] h-[60px]" src="images/zap-fast.png" alt="" />
-          <h2 class="text-white text-[22px] font-bold lg:text-[24px]">Exclusive Interviews</h2>
+          <h2 class="text-white text-[22px] font-bold lg:text-[24px]">
+            Exclusive Interviews
+          </h2>
           <p class="text-[16px] leading-[24px] text-white/80">
-            Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.
+            Get unprecedented access to industry titans, startup founders, and
+            tech visionaries. Our host secures exclusive conversations you won't
+            find anywhere else, diving deep into their journeys, failures, and
+            success strategies.
           </p>
         </div>
         <div
@@ -207,6 +216,80 @@
             for every episode.
           </p>
         </div>
+      </div>
+    </div>
+    <!-- Featured Episodes -->
+    <div class="Featured px-5 py-[40px] lg:p-[120px]">
+      <h2 class="text-white font-bold text-[32px] text-center lg:text-[48px] ">
+        Featured Episodes
+      </h2>
+      <div
+        class="Featured_card py-[24px]  grid grid-cols-1 place-items-center md:grid-cols-2 lg:grid-cols-3 lg:justify-items-center gap-[16px] lg:gap-0"
+      >
+        <div class="w-[400px] h-[393px] bg-[#250D44] rounded-[15px] lg:w-[380px] lg:h-[440px]">
+          <iframe
+            class="w-full rounded-[15px] h-[225px] lg:h-[214xpx]"
+            src="https://www.youtube.com/embed/JnX7Oc8LqD8?si=G2s6Q4gBq7iS9IPN"
+            title="YouTube video player"
+            frameborder="0"
+            allow="
+              accelerometer;
+              autoplay;
+              clipboard-write;
+              encrypted-media;
+              gyroscope;
+              picture-in-picture;
+              web-share;
+            "
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+          <div class="flex flex-col p-4 space-y-[8px] lg:py-[12px] lg:px-[24px]">
+            <h2 class="text-white font-bold text-[20px] lg:text-[24px]">
+              সূরা আর রহমান  | Zain Abu Kautsar
+            </h2>
+            <p class="text-white/60 text-[16px] leading-[26px] lg:leading-[24px]">
+              Exploring how artificial intelligence is transforming our daily
+              routines and what to expect in the next...
+            </p>
+            <div class="flex space-x-[10px] items-center">
+              <img class="w-4 h-4" src="images/clock.png" alt="" />
+              <p class="text-[#00FF88] text-[16px]">42 min</p>
+            </div>
+          </div>
+        </div>
+        <div class="w-[400px] h-[393px] bg-[#250D44] rounded-[15px] lg:w-[380px] lg:h-[440px]">
+          <iframe class="w-full rounded-[15px] h-[225px] lg:h-[214xpx]" src="https://www.youtube.com/embed/hR561PzJSC4?si=gsaOog9jJUUqoRRe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <div class="flex flex-col p-4 space-y-[8px] lg:py-[12px] lg:px-[24px]">
+            <h2 class="text-white font-bold text-[20px] lg:text-[24px]"> (سورة يس) Surah Yasin | Morning Tilawat
+            </h2>
+            <p class="text-white/60 text-[16px] leading-[26px] lg:leading-[24px]">
+              Exploring how artificial intelligence is transforming our daily
+              routines and what to expect in the next...
+            </p>
+            <div class="flex space-x-[10px] items-center">
+              <img class="w-4 h-4" src="images/clock.png" alt="" />
+              <p class="text-[#00FF88] text-[16px]">42 min</p>
+            </div>
+          </div>
+        </div>
+        <div class="w-[400px] h-[393px] bg-[#250D44] rounded-[15px] lg:w-[380px] lg:h-[440px]">
+          <iframe class="w-full rounded-[15px] h-[225px] lg:h-[214xpx]" src="https://www.youtube.com/embed/cAeuDZt4-kU?si=UFHXm_gLsJ2TxtXt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <div class="flex flex-col p-4 space-y-[8px] lg:py-[12px] lg:px-[24px]">
+            <h2 class="text-white font-bold text-[20px] lg:text-[24px]">
+               Surah Al Mulk Recited by Alaa' Yaseer
+            </h2>
+            <p class="text-white/60 text-[16px] leading-[26px] lg:leading-[24px]">
+              Exploring how artificial intelligence is transforming our daily
+              routines and what to expect in the next...
+            </p>
+            <div class="flex space-x-[10px] items-center">
+              <img class="w-4 h-4" src="images/clock.png" alt="" />
+              <p class="text-[#00FF88] text-[16px]">42 min</p>
+            </div>
+          </div>
+        </div>
+       
       </div>
     </div>
   </body>
