--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="inter-font bg-[#412567]">
+  <body class="inter-font bg-[#1A0B2E]">
     <nav
       class="flex justify-between items-center p-[20px] md:px-[150px] md:py-[30px] lg:px-[200px] border-b-2 border-b-[#746964]"
     >
@@ -220,13 +220,15 @@
     </div>
     <!-- Featured Episodes -->
     <div class="Featured px-5 py-[40px] lg:p-[120px]">
-      <h2 class="text-white font-bold text-[32px] text-center lg:text-[48px] ">
+      <h2 class="text-white font-bold text-[32px] text-center lg:text-[48px]">
         Featured Episodes
       </h2>
       <div
-        class="Featured_card py-[24px]  grid grid-cols-1 place-items-center md:grid-cols-2 lg:grid-cols-3 lg:justify-items-center gap-[16px] lg:gap-0"
+        class="Featured_card py-[24px] grid grid-cols-1 place-items-center md:grid-cols-2 lg:grid-cols-3 lg:justify-items-center gap-[16px] lg:gap-0"
       >
-        <div class="w-[400px] h-[393px] bg-[#250D44] rounded-[15px] lg:w-[380px] lg:h-[440px]">
+        <div
+          class="w-[400px] h-[393px] bg-[#250D44] rounded-[15px] lg:w-[380px] lg:h-[440px]"
+        >
           <iframe
             class="w-full rounded-[15px] h-[225px] lg:h-[214xpx]"
             src="https://www.youtube.com/embed/JnX7Oc8LqD8?si=G2s6Q4gBq7iS9IPN"
@@ -244,11 +246,15 @@
             referrerpolicy="strict-origin-when-cross-origin"
             allowfullscreen
           ></iframe>
-          <div class="flex flex-col p-4 space-y-[8px] lg:py-[12px] lg:px-[24px]">
+          <div
+            class="flex flex-col p-4 space-y-[8px] lg:py-[12px] lg:px-[24px]"
+          >
             <h2 class="text-white font-bold text-[20px] lg:text-[24px]">
-              সূরা আর রহমান  | Zain Abu Kautsar
+              সূরা আর রহমান | Zain Abu Kautsar
             </h2>
-            <p class="text-white/60 text-[16px] leading-[26px] lg:leading-[24px]">
+            <p
+              class="text-white/60 text-[16px] leading-[26px] lg:leading-[24px]"
+            >
               Exploring how artificial intelligence is transforming our daily
               routines and what to expect in the next...
             </p>
@@ -258,28 +264,35 @@
             </div>
           </div>
         </div>
-        <div class="w-[400px] h-[393px] bg-[#250D44] rounded-[15px] lg:w-[380px] lg:h-[440px]">
-          <iframe class="w-full rounded-[15px] h-[225px] lg:h-[214xpx]" src="https://www.youtube.com/embed/hR561PzJSC4?si=gsaOog9jJUUqoRRe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-          <div class="flex flex-col p-4 space-y-[8px] lg:py-[12px] lg:px-[24px]">
-            <h2 class="text-white font-bold text-[20px] lg:text-[24px]"> (سورة يس) Surah Yasin | Morning Tilawat
-            </h2>
-            <p class="text-white/60 text-[16px] leading-[26px] lg:leading-[24px]">
-              Exploring how artificial intelligence is transforming our daily
-              routines and what to expect in the next...
-            </p>
-            <div class="flex space-x-[10px] items-center">
-              <img class="w-4 h-4" src="images/clock.png" alt="" />
-              <p class="text-[#00FF88] text-[16px]">42 min</p>
-            </div>
-          </div>
-        </div>
-        <div class="w-[400px] h-[393px] bg-[#250D44] rounded-[15px] lg:w-[380px] lg:h-[440px]">
-          <iframe class="w-full rounded-[15px] h-[225px] lg:h-[214xpx]" src="https://www.youtube.com/embed/cAeuDZt4-kU?si=UFHXm_gLsJ2TxtXt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-          <div class="flex flex-col p-4 space-y-[8px] lg:py-[12px] lg:px-[24px]">
+        <div
+          class="w-[400px] h-[393px] bg-[#250D44] rounded-[15px] lg:w-[380px] lg:h-[440px]"
+        >
+          <iframe
+            class="w-full rounded-[15px] h-[225px] lg:h-[214xpx]"
+            src="https://www.youtube.com/embed/hR561PzJSC4?si=gsaOog9jJUUqoRRe"
+            title="YouTube video player"
+            frameborder="0"
+            allow="
+              accelerometer;
+              autoplay;
+              clipboard-write;
+              encrypted-media;
+              gyroscope;
+              picture-in-picture;
+              web-share;
+            "
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+          <div
+            class="flex flex-col p-4 space-y-[8px] lg:py-[12px] lg:px-[24px]"
+          >
             <h2 class="text-white font-bold text-[20px] lg:text-[24px]">
-               Surah Al Mulk Recited by Alaa' Yaseer
+              (سورة يس) Surah Yasin | Morning Tilawat
             </h2>
-            <p class="text-white/60 text-[16px] leading-[26px] lg:leading-[24px]">
+            <p
+              class="text-white/60 text-[16px] leading-[26px] lg:leading-[24px]"
+            >
               Exploring how artificial intelligence is transforming our daily
               routines and what to expect in the next...
             </p>
@@ -289,8 +302,80 @@
             </div>
           </div>
         </div>
-       
+        <div
+          class="w-[400px] h-[393px] bg-[#250D44] rounded-[15px] lg:w-[380px] lg:h-[440px]"
+        >
+          <iframe
+            class="w-full rounded-[15px] h-[225px] lg:h-[214xpx]"
+            src="https://www.youtube.com/embed/cAeuDZt4-kU?si=UFHXm_gLsJ2TxtXt"
+            title="YouTube video player"
+            frameborder="0"
+            allow="
+              accelerometer;
+              autoplay;
+              clipboard-write;
+              encrypted-media;
+              gyroscope;
+              picture-in-picture;
+              web-share;
+            "
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+          <div
+            class="flex flex-col p-4 space-y-[8px] lg:py-[12px] lg:px-[24px]"
+          >
+            <h2 class="text-white font-bold text-[20px] lg:text-[24px]">
+              Surah Al Mulk Recited by Alaa' Yaseer
+            </h2>
+            <p
+              class="text-white/60 text-[16px] leading-[26px] lg:leading-[24px]"
+            >
+              Exploring how artificial intelligence is transforming our daily
+              routines and what to expect in the next...
+            </p>
+            <div class="flex space-x-[10px] items-center">
+              <img class="w-4 h-4" src="images/clock.png" alt="" />
+              <p class="text-[#00FF88] text-[16px]">42 min</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+    <!--  -->
+    <section class="px-[20px] flex flex-col space-y-[24px] lg:space-y-[40px] lg:px-[200px] ">
+      <h2 class="text-center text-white font-bold text-[32px] lg:text-[48px] ">
+        Meet the Host
+      </h2>
+      <div class="bg-[#351165]/40 flex flex-col items-center p-[24px] space-y-[16px] rounded-[24px] lg:flex-row lg:p-[40px] lg:justify-between lg:space-x-[24px]   ">
+        <div class="" >
+          <img class="w-[150px] h-[150px] lg:w-[200px] lg:h-[200px] rounded-full " src="images/host.png" alt="" />
+        </div>
+        <div class="flex flex-col items-center space-y-[16px] lg:items-start ">
+          <h2 class="text-white font-bold text-[24px] lg:text-[32px] ">Alex Kumar</h2>
+          <p class=" text-white/60  text-[16px] leading-[24px] leading-[24px]">
+            Tech entrepreneur, productivity expert, and lifelong learner. Alex
+            has been in the tech industry for over 10 years, working with
+            startups and Fortune 500 companies. Through TechWave, Alex shares
+            insights from industry leaders and practical advice for anyone
+            looking to grow in tech.
+          </p>
+          <div class="flex space-x-[8px]">
+           <div class="border border-[#533C72] p-[10px] rounded-full flex justify-center items-center">
+             <img src="images/linkedin.png" alt="" />
+           </div>
+            <div class="border border-[#533C72] p-[10px] rounded-full flex justify-center items-center">
+              <img src="images/x.png" alt="" />
+            </div>
+           <div class="border border-[#533C72] p-[10px] rounded-full flex justify-center items-center">
+             <img src="images/instagram.png" alt="" />
+           </div>
+            <div class="border border-[#533C72] p-[10px] rounded-full flex justify-center items-center">
+              <img src="images/youtube.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
