google inter font adedd

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body class="inter-font bg-[#1A0B2E]">
+  <body class="font-['Inter'] bg-[#1A0B2E] max-w-[2000px] mx-auto">
     <nav
       class="flex justify-between items-center p-[20px] md:px-[150px] md:py-[30px] lg:px-[200px] border-b-2 border-b-[#412567]"
     >
